--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-# Configuraci?n para leer el archivo data.sql al inicio
+# Configuracion para leer el archivo data.sql al inicio
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 # Configurar el puerto HTTPS
-server.port=8443
+server.port=8080
 
-# Tama?o m?ximo de archivo
+# Tama?o maximo de archivo
 spring.servlet.multipart.max-file-size=2MB
 
 # Tama?o m?ximo de solicitud (incluye toda la carga de datos)
