--- a/pom.xml
+++ b/pom.xml
@@ -69,14 +69,14 @@
         </dependency>
 
         <!-- Spring Security -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- JSON Web Tokens (JWT) -->
         <dependency>
