Configuración Base de Datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=GestionAlimentos
 
 # Configuraci?n H2
-spring.datasource.url=jdbc:h2:mem:alimentos
+spring.datasource.url=jdbc:h2:mem:gestionAlimentos
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
